@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <item>
-  <title>New version 4.5.1 of Pulse is available.</title>
-  <version>4.5.1</version>
-  <url>http://www.rowetechinc.co/pulse/Pulse.Installer.v.4.5.1.Update.exe</url>
+  <title>New version 4.5.5 of Pulse is available.</title>
+  <version>4.5.5</version>
+  <url>http://www.rowetechinc.co/pulse/Pulse.Installer.v.4.5.5.Update.exe</url>
   <changelog>http://www.rowetechinc.co/pulse/releasenotes.html</changelog>
 </item>
