@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.5.1 ChangeLog</title>
+		<title>Version 4.5.5 ChangeLog</title>
 		<style type="text/css">
 .auto-style1 {
 	text-decoration: underline;
@@ -9,30 +9,57 @@
 </style>
 	</head>
 	<body>
-	<p>
-<br/><span class="auto-style1">Pulse-4.5.1</span>
-<br /> - Added Diagnostic view to main view page.
-<br /> - Fixing updating plots to fast.
-<br /> - In ViewDataDvlViewModel, fixed Display All data.
-<br /> - Fixed Display All.
-<br /> - Moved the copyright information to the text file Copyright.txt.
-<br /> - Skip the Compass Calibration in the wizard.  Added the compass calibration as a button in the Configuration screen.
-<br /> - Added BTIC Installer.
-<br /> - In LoadProjectsViewModel, improved the performance of loading a project in ScanProjectAsync().
-<br /> - In DeployAdcpViewModel, added Zero Pressure sensor command.
-<br /> - In PingModelViewModel, fixed the timing and display.
-<br /> - In TimeSeriesPlotViewModel, added AddIncomingDataBulk to display all data.
-<br /> - In ProjectReportText, removed the await in LoadData().
-<br /> - In ProfilePlotViewModel, update the plot when selection changed in UpdateSeriesVisibility().
-<br /> - In ProjectImage, added ProduceCompleteImage() to produce the image in a single pass.
-<br /> - In PlaybackViewModel, fixed playback speed and divide by zero.
-<br /><span class="auto-style1">RTI-3.4.1</span>
-<br /> - Changed to ReadBytes to read in from the file to improve performance.
-<br /> - In AdcpDatabaseWriter, added WriteFileToDatabase() to write all the ensembles at once.
-
-<br/>
-
-
- </p>
+        <p>
+            <br /><span class="auto-style1">Pulse-4.5.5</span>
+            <br />   - Fixed bug when the internet is connected, it will give an error with AutoUpdate.
+            <br />   - Check if the website exists in AutoUpdate.
+            <br />   - Handle UDP data in communication.
+            <br />   - Removed SerialNumber generator for AddProjectVM.
+            <br />   - In ScanAdcpViewModel, added SerialNumberGenerator to allow either scan or select.
+            <br />   - Remove Ship Speed in DataOutputVM and WpMagDirOutputVM.
+            <br />   - Added BaseDataOutputView/VM.
+            <br />   - Added WpMagDirOutputView/VM to output a special PD6 style message that contains mag and dir of water for selected bins.
+            <br />   - Fixed a bug with the DataOutputViewModel to output the data with a [cr][lf]
+            <br />   - Fixed data size in wizard for burst deployments in AdcpSubsystemConfigurationViewModel.
+            <br />   - In AdcpConfiguration, fixed data size in wizard for burst deployment.
+            <br />   - Fixed background and foreground colors for the numeric up/down boxes.
+            <br />   - Added PredictionModel and PredicitonModelInput.
+            <br />   - Added TCP and UDP server.
+            <br />   - Added DataOutputView/ViewModel.
+            <br />   - Added Ship Velocity to ViewDataTextViewModel.
+            <br />   - In ScreenDataViewModel, fixed RemovedShip to include instrument and ship transform.
+            <br />   - In AdcpConnection, added AdcpUdp and removed AdcpTcp.
+            <br />   - In TerminalAdcpViewModel, added AdcpUdp and removed AdcpTcp.
+            <br />   - In SerialNumberGeneratorVM, added UpdateSerialNumber() to add a new serial number.
+            <br />   - In TerminalAdcpViewModel, in ScanSerialPorts(), made it also reconnect the serial port.
+            <br />   - Moved PulseDiaglogViewModel.
+            <br />   - Added PredictionModel.
+            <br />   - In DistanceTraveled, test for NaN for Latitude or Longitude in AccumulateGps().
+            <br />   - In ScreenDataViewModel, in SetPreviousBottomTrackVelocity() checked if VTG message exists.
+            <br />   - In TimeSeriesPlotViewModel, check if the series type is set in GenerateReport().
+            <br />   - In TerminalAdcpViewModel, added some additional command buttons.
+            <br /><span class="auto-style1">RTI-3.4.3</span>
+            <br /> - RTI-3.4.3
+            <br /> - Fixed bug by adding a line feed to the end EnsToPd6_13Codec.
+            <br /> - Made the spacing for the PD6 data match the documentation.
+            <br /> - In RemoveShipSpeed, added GetPreviousBottomTrackVelocity() to get the previous Bottom Track velocity to store for next iteration.
+            <br /> - In ShipVelocityDataSet, added VelocityVectors.
+            <br /> - In VelocityVector, added GenerateShipVectors().
+            <br /> - Added AdcpUdp.
+            <br /> - In BottomTrackDataSet, fixed bug if no beams in data.
+            <br /> - In RemoveShipSpeed, check if Bottom Track has no beams.
+            <br /> - In PD4_5Codec, fixed a bug where the thread lock holds in SearchForHeaderStart().
+            <br /> - In SerialNumber, added option to add new line in GetSerialNumberDescString().
+            <br /> - In Ensemble, added EnsembleWaterProfileTextOutput() to display all data as text.
+            <br /> - In Subsystem, added IsVerticalBeam() to check if the code is for a vertical beam subsystem.
+            <br /> - In FilePlayback, fixed bug in FindRtbEnsembles() when ensemble numbers are duplicated.
+            <br /> - In all the codecs, make them in charge of clearing there buffers if the data is not in there format.
+            <br /> - Added VmDas ASCII codec.
+            <br /> - Added a Ship Velocity data set.  Also added Ship Velocity to Bottom Track dataset.
+            <br /> - Added Ship coordinate transform to Transform.cs.
+            <br /> - Added Water Mass Ship Data Set.
+            <br /> - Added VmManualWaterTrack.cs.
+            <br />
+        </p>
 	</body>
 </html>
